--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(ode_oo)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
-set(SOURCE_FILES main.cpp system/AbstractOdeSystem.cpp system/AbstractOdeSystem.h system/AbstractSecondOrderOdeSystem.cpp system/AbstractSecondOrderOdeSystem.h solver/AbstractOdeSolver.cpp solver/AbstractOdeSolver.h system/AbstractFirstOrderOdeSystem.cpp system/AbstractFirstOrderOdeSystem.h solver/AbstractFirstOrderOdeSolver.cpp solver/AbstractFirstOrderOdeSolver.h)
+set(SOURCE_FILES main.cpp system/AbstractOdeSystem.cpp system/AbstractOdeSystem.h system/AbstractSecondOrderOdeSystem.cpp system/AbstractSecondOrderOdeSystem.h solver/AbstractOdeSolver.cpp solver/AbstractOdeSolver.h system/AbstractFirstOrderOdeSystem.cpp system/AbstractFirstOrderOdeSystem.h solver/Solution.cpp solver/Solution.h solver/GeneralizedTrapezoidalSolver.cpp solver/GeneralizedTrapezoidalSolver.h)
 add_executable(ode_oo ${SOURCE_FILES})
